--- a/OpenFDATest/OpenFDATest.csproj
+++ b/OpenFDATest/OpenFDATest.csproj
@@ -47,6 +47,8 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RetrieveMedicineInfo.cs" />
+    <Compile Include="SortIncomingData.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
